# magnum-bootstrap

./: .gitmodules
dependencies/: CMakeLists.txt  build.bat  build_vc14.bat
dependencies/imgui/: CMakeLists.txt
src/: CMakeLists.txt  MyApplication.cpp
